--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,25 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
+  position: fixed;
+  top: 0;
+  width: 1210px;
   z-index: 100;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+@media (max-width: 1440px) {
+  header {
+    width: 85%;
+  }
+}
+
+@media (max-width: 565px) {
+  header {
+    width: 100%;
+    left: 0;
+  }
 }
 
 header h1 {
@@ -248,8 +265,17 @@ header input {
   }
 }
 
+header input:-webkit-autofill,
+header input:-webkit-autofill:hover,
+header input:-webkit-autofill:focus,
+header input:-webkit-autofill:active {
+  -webkit-transition: background-color 5000s ease-in-out 0s;
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: rgba(222, 220, 231, 0.849) !important;
+}
+
 header input:focus {
-  border: solid 1px rgba(158, 61, 238, 0.349);
+  border: solid 1px rgba(158, 61, 238, 0.616);
 }
 
 header #search {
@@ -334,6 +360,10 @@ header .nav-active {
   opacity: 1;
 }
 
+.sticky {
+  background-color: rgba(24, 23, 29, 0.973);
+}
+
 main {
   width: 1210px;
   margin: 0 auto;
@@ -349,6 +379,8 @@ main {
 
 main img {
   max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   cursor: pointer;
 }
 
@@ -437,6 +469,7 @@ main .img-container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-radius: 2px;
 }
 
 main .img-container .details-btn {
@@ -580,6 +613,42 @@ main #upcoming-slide {
   }
 }
 
+main #upcoming-slide img {
+  height: 240px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (max-width: 1150px) {
+  main #upcoming-slide img {
+    height: 200px;
+  }
+}
+
+@media (max-width: 780px) {
+  main #upcoming-slide img {
+    height: 220px;
+  }
+}
+
+@media (max-width: 625px) {
+  main #upcoming-slide img {
+    height: 250px;
+  }
+}
+
+@media (max-width: 565px) {
+  main #upcoming-slide img {
+    height: 200px;
+  }
+}
+
+@media (max-width: 390px) {
+  main #upcoming-slide img {
+    height: 250px;
+  }
+}
+
 main #upcoming-slide .swiper-slide {
   position: relative;
   display: -webkit-box;
@@ -702,6 +771,24 @@ main #movies-filter {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.details-header {
+  background-color: rgba(24, 23, 29, 0.863);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 2rem 1.3rem 1.3rem 1.3rem;
+  border-radius: 0 0 0.1rem 0.1rem;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+  z-index: 100;
 }
 
 #movie-banner {
@@ -1120,7 +1207,7 @@ body {
   background: linear-gradient(rgba(34, 33, 33, 0.733), rgba(116, 44, 163, 0.329)), url("https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg") no-repeat;
   background-position: top;
   background-size: cover;
-  min-height: 50vh;
+  min-height: 70vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1128,14 +1215,16 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-bottom: solid 1px rgba(158, 61, 238, 0.164);
   margin-bottom: 8%;
 }
 
 #landing-page .landing-txt {
   width: 500px;
-  border-radius: 0.1rem;
-  padding: 7rem 0;
+  padding: 10rem 0;
 }
 
 @media (max-width: 780px) {
@@ -1157,6 +1246,9 @@ body {
   font-family: "Anton", sans-serif;
   color: #eee1f8;
   font-size: 2.4rem;
+  background: -webkit-linear-gradient(rgba(244, 241, 247, 0.973), #c79cf1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 @media (max-width: 780px) {
@@ -1179,6 +1271,7 @@ body {
 
 #landing-page .landing-txt p {
   color: #e2c0f8;
+  color: #ebe5f0;
   font-size: 1.3rem;
   line-height: 2rem;
 }
@@ -1193,12 +1286,6 @@ body {
 @media (max-width: 625px) {
   #landing-page .landing-txt p {
     font-size: 1rem;
-  }
-}
-
-@media (max-width: 565px) {
-  #landing-page .landing-txt p {
-    font-size: 0.9rem;
   }
 }
 
