--- a/css/style.scss
+++ b/css/style.scss
@@ -2,8 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
-@import './variables', './mixins', './header', './home', './details';
-
+@import "./variables", "./mixins", "./header", "./home", "./details";
 
 * {
   margin: 0;
@@ -15,7 +14,7 @@
   outline: none;
 }
 
-a{
+a {
   text-decoration: none;
   color: rgba(230, 207, 245, 0.911);
 }
@@ -47,16 +46,16 @@ body {
       no-repeat;
   background-position: top;
   background-size: cover;
-  min-height: 50vh;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   border-bottom: solid 1px rgba(158, 61, 238, 0.164);
   margin-bottom: 8%;
 
   .landing-txt {
     width: 500px;
-    border-radius: 0.1rem;
-    padding: 7rem 0;
+    padding: 10rem 0;
 
     @include tablet {
       width: 90%;
@@ -73,6 +72,12 @@ body {
       font-family: "Anton", sans-serif;
       color: rgb(238, 225, 248);
       font-size: 2.4rem;
+      background: -webkit-linear-gradient(
+        rgba(244, 241, 247, 0.973),
+        rgb(199, 156, 241)
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       @include tablet {
         font-size: 2rem;
       }
@@ -87,6 +92,7 @@ body {
 
     p {
       color: rgb(226, 192, 248);
+      color: rgb(235, 229, 240);
       font-size: 1.3rem;
       line-height: 2rem;
       @include tablet {
@@ -96,10 +102,6 @@ body {
 
       @include mobile {
         font-size: 1rem;
-      }
-
-      @include sm-mobile {
-        font-size: 0.9rem;
       }
     }
   }
@@ -116,13 +118,13 @@ footer {
   background-image: linear-gradient(to right, rgb(10, 10, 14), rgb(21, 17, 24));
   border-top: solid 1px rgb(27, 22, 31);
   color: rgb(122, 95, 141);
-  p{
+  p {
     margin-bottom: 0.2rem;
     border-bottom: solid 1px rgb(27, 22, 31);
     padding: 0 0 0.2rem 0;
   }
 
-  i{
+  i {
     cursor: pointer;
     margin: 0.2rem;
   }
@@ -156,8 +158,12 @@ footer {
   position: fixed;
   top: 0;
   left: 0;
-  background-image: linear-gradient(to bottom right,rgb(25, 22, 27),rgb(22, 17, 27));;
-  display:flex;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(25, 22, 27),
+    rgb(22, 17, 27)
+  );
+  display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
