--- a/css/_header.scss
+++ b/css/_header.scss
@@ -83,6 +83,9 @@ header {
         margin-top: 0.7rem;
         font-size: 0.9rem;
       }
+      option{
+        padding: 5rem;
+      }
     }
 
     a {
